force-app/main/default/objects/Reservation__c/fields/Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Date__c</fullName>
    <description
  >Fecha de entrada del huésped. Campo obligatorio; se valida contra Check_Out_Date__c mediante una Validation Rule.</description>
    <label>Check In Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>