force-app/main/default/objects/Reservation__c/fields/Check_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Date__c</fullName>
    <description
  >Fecha de salida del huésped. Campo obligatorio; debe ser posterior a Check_In_Date__c (validado por una Validation Rule).</description>
    <label>Check Out Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>