force-app/main/default/objects/Reservation__c/fields/Guest__c.field-meta.xml
<CustomField>
    <fullName>Guest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Huésped que realiza la reserva. Usa el objeto estándar Contact en vez de un objeto custom Guest__c, para reutilizar funcionalidad estándar de Salesforce (actividades, direcciones, duplicados, etc.).</description>
    <label>Guest</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>