force-app/main/default/objects/Reservation__c/fields/Is_Demo__c.field-meta.xml
<CustomField>
    <fullName>Is_Demo__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Indica si el registro es un dato de demostración visible para el Guest User del sitio Experience Cloud. Se usa como criterio en las Sharing Rules del sitio público — solo los registros con este campo en true se comparten con usuarios no autenticados. Default: true.</description>
    <label>Is Demo</label>
    <type>Checkbox</type>
</CustomField>