force-app/main/default/objects/Reservation__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <description
  >Habitación reservada. Relación Master-Detail: si se elimina la habitación, se eliminan también sus reservas asociadas. Habilita el Roll-Up Summary Reservation_Count__c en Room__c.</description>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>