force-app/main/default/objects/Reservation__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description
  >Monto total de la reserva. No es un campo de fórmula: se calcula mediante un trigger de Apex en la Fase 2 (Nightly_Rate__c × noches), para practicar lógica de negocio en Apex.</description>
    <label>Total Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>