force-app/main/default/objects/Reservation__c/validationRules/Checkout_After_Checkin.validationRule-meta.xml
<ValidationRule>
    <fullName>Checkout_After_Checkin</fullName>
    <active>true</active>
    <errorConditionFormula
  >Check_Out_Date__c &lt;= Check_In_Date__c</errorConditionFormula>
    <errorMessage
  >La fecha de Check-Out debe ser posterior a la fecha de Check-In.</errorMessage>
    <errorDisplayField>Check_Out_Date__c</errorDisplayField>
</ValidationRule>